<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="category_now_playing"
        android:title="@string/pref_category_now_playing">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show_now_playing"
            android:summary="@string/pref_show_now_playing_summary"
            android:title="@string/pref_show_now_playing_title" />

        <Preference
            android:key="grant_notification_access"
            android:title="@string/pref_notification_access_title"
            android:summary="@string/notification_access_required" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_sleep"
        android:title="@string/pref_category_sleep">

        <ListPreference
            android:defaultValue="@string/timeout_default_value"
            android:entries="@array/timeout_labels"
            android:entryValues="@array/timeout_values"
            android:key="inactivity_timeout_ms"
            android:summary="@string/pref_inactivity_timeout_summary"
            android:title="@string/pref_inactivity_timeout_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
